WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233599
html/semantics/forms/constraints/form-validation-validity-customError.html WPT test is failing
https://bugs.webkit.org/show_bug.cgi?id=233599
Summary
html/semantics/forms/constraints/form-validation-validity-customError.html WP...
Chris Dumez
Reported
2021-11-29 14:49:58 PST
html/semantics/forms/constraints/form-validation-validity-customError.html WPT test is failing in WebKit but passing in Blink & Gecko.
Attachments
Patch
(5.47 KB, patch)
2021-11-29 14:54 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(14.66 KB, patch)
2021-11-29 16:19 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(16.90 KB, patch)
2021-11-29 21:43 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-11-29 14:54:18 PST
Created
attachment 445351
[details]
Patch
Chris Dumez
Comment 2
2021-11-29 16:19:59 PST
Created
attachment 445363
[details]
Patch
Chris Dumez
Comment 3
2021-11-29 21:43:03 PST
Created
attachment 445379
[details]
Patch
Chris Dumez
Comment 4
2021-11-30 12:49:52 PST
Patch is ready for review.
EWS
Comment 5
2021-11-30 13:28:25 PST
Committed
r286321
(
244680@main
): <
https://commits.webkit.org/244680@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 445379
[details]
.
Radar WebKit Bug Importer
Comment 6
2021-11-30 13:29:45 PST
<
rdar://problem/85885547
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug