html/semantics/forms/constraints/form-validation-validity-customError.html WPT test is failing https://bugs.webkit.org/show_bug.cgi?id=233599

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline WPT test that is now passing.

* web-platform-tests/html/semantics/forms/constraints/form-validation-validity-customError-expected.txt:

Source/WebCore:

No new tests, rebaselined existing test.

* html/FormAssociatedElement.cpp:
(WebCore::FormAssociatedElement::customError const):
Per https://html.spec.whatwg.org/#dom-validitystate-customerror, customError() should return true
if the control is suffering from a custom error. Per https://html.spec.whatwg.org/#custom-validity-error-message,
when setCustomValidity() is called with a non-empty message, the element suffers from a custom error, no
matter if the element is a candidate for constraint validation or not.

(WebCore::FormAssociatedElement::validationMessage const):
Per https://html.spec.whatwg.org/#dom-cva-validationmessage, the validationMessage getter
should return the empty string if "the element is not a candidate for constraint validation".



Canonical link: https://commits.webkit.org/244680@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286321 268f45cc-cd09-0410-ab3c-d52691b4dbfc